Introduced new class for text items to indicate the kind of data they contain. This allows numeric form item properties to be correctly aligned. Let me know if this is going to be a problem, or class names need to be changed.

--- a/html/modules/base/xarstyles/xarcore-xhtml1-strict.css
+++ b/html/modules/base/xarstyles/xarcore-xhtml1-strict.css
@@ -100,6 +100,12 @@
     width: 90%;
 }
 
+/* Datatypes for form items */
+
+.xar-form-datatype-text {}
+.xar-form-datatype-currency {text-align: right;}
+.xar-form-datatype-number {text-align: right;}
+
 /* scrollable area heights */
 .xar-area-small { height: 10ex; }
 .xar-area-medium { height: 20ex; }
